# ppsspp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  EBOOT.PBP  Makefile  cmake_install.cmake  crash_log.txt  main.c  player.c  player.h  retro_game  retro_game.prx  shape  texture
.github/workflows/: release.yml
Level/: level.c  level.h  levelhandler.c  levelhandler.h
background/: background.c  background.h
bgm/: bgmHandler.c  bgmHandler.h
emulator/memstick/PSP/SYSTEM/: controls.ini  ppsspp.ini
enemies/: enemy.c  enemy.h  melee.c  melee.h  projectile.c  projectile.h  ranged.c  ranged.h
enemies/mummy/: mummy.c  mummy.h
enemies/shurikenDude/: shurikenDude.c  shurikenDude.h
enemies/slime/: slime.c  slime.h
entity/: entity.c  entity.h  spriteFramesArray.h
interactables/: chest.c  chest.h
items/: item.c  item.h
map/: map.c  map.h
player/: player.c  player.h
pspsh/: crash_log.txt  retro_game.prx
pspsh/assets/: map.json
pspsh/resources/maps/: cemetery.json  map_level1.json  map_level1.tiled-session  map_level1.tmx
resources/maps/: cemetery.json  cemetery.tiled-session  cemetery.tmj  cemetery.tmx  map_level1.json  map_level1.tiled-session  map_level1.tmx  map_level2.json  map_level2.tmx  sprites_cemetery.tsx
resources/maps/cemetery/: cemetery.csv  cemetery.tmx  cemetery.tsx  collision_tileset.psd
resources/sprites/: collision_tileset.psd
ui/: ui.c  ui.h
